1998-12-09  Dave Camp  <campd@oit.edu>
	* gnome-dateedit.c (select_clicked): Fixed the problem where 
	the first time the Calendar button was pushed it didn't place
	itself right.  Also made it select the correct date in the
	calendar widget
	(create_children): Put the gtk_widget_show on the calender 
	back here.
	
1998-12-10  Andrew T. Veliath  <andrewtv@usa.net>

	* gnome-app-helper.c, gnome-app.c (gnome_app_set_menus):
	(gnome_app_set_toolbar): Have gnome dock item adhere to gnome
	preferences toolbar and menubar relief styles.

	* gnome-preferences.[ch]: Updates and cleanups.

	{toolbar,menubar}_handlebox preferences removed; obsoleted by
	gnome-dock integration.

	Renamed toolbar_relief to toolbar_relief_btn.  Renamed
	toolbar_flat to toolbar_relief, inverting the logic for
	consistency with menubar relief.

1998-12-10  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (book_button_release): fixed some weird code that
	caused mayhem when the last page of a notebook was being dragged
	away. did I do this? ;)
	(set_active_view): update mdi->active_window.

1998-12-09  Dave Camp  <campd@oit.edu>
        * gnome-dateedit.c (select_clicked):

        Shows the pop-up calendar widget.

        Synchnonizes the pop-up calendar with the date in the entrybox
        (create_children): Took out gtk_widget_show on the calendar, as
        is is now showed in select_clicked.

1998-12-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gil_place_icon): Center images in the icon
	list. 
	(gil_unselect_all): Unselect all of the icons on left button
	click. 

1998-12-09  Ettore Perazzoli  <ettore@comm2000.it>

	* dock_demo.c (main): Updated calls to `gnome_dock_add_item()'.
	Set a default window size instead of forcing a minimum size.

	* gnome-app.c: #Include "libgnomeui/gnome-dock.h".
	(gnome_app_init): Create `dock' and `vbox', and make `dock' child
 	of `vbox'.
	(gnome_app_configure_positions): `#if 0'ed out.